Bug 366438. Fix accessible line break algorithm. r=surkov